        - don't let iso14755 or mouse reporting get into the way of perl
          (could lead to global grabs never being cleared).
        - moved Shift-Button2 paste combination to Meta-Button2.
        - removed (unused) arabic presentation form composing sequences.
        - correctly ask XIM for events it needs to have enabled on the window.

7.2  Sun Jan 22 21:58:16 CET 2006
        - bugfix: urxvt (not urxvtd) did not correctly handle multiple
          environments necessary, which resulted in segfaults within
          getenv (reproducable: urxvt -fn 9x15, open a menu once,
          ctrl-shift-672c).
        - bugfix: the selection speedup in in 7.1 unfortunately caused
          non-ascii characters to enlarge/move the selection.
        - bugfix: resizing sometimes leaked lines from the secondary to
          the primary screen.
        - bugfix: reducing window size while large amounts of text were output
          could lead to an assertion failure.
        - added "tabbed" extension that provides a crude tabbed terminal.
        - added "readline" extension that allows cursor positioning
          via mouse clicks.
	- now it is possible to insert the value of the CLIPBOARD selection
	  with shift - mouse button 2.
        - fixed the automove-background extension to ignore coordinates
          in non-synthetic events.
        - created a separate libpty for portable and secure
          pty/tty/utmp/wtmp/lastlog handling, and include it in rxvt-unicode.
        - the non-terminfo visual bell now works asynchronously, so
          continuous ASCI BELs in one terminal do no longer monopolise the
          whole urxvt[d] process.
        - support some *BSD makes (for the time being, gnu make is a safe bet).
        - work around bugs in FreeBSD's gcc.
        - implemented some *BSD fixes in configure.
	- removed support for obsolete offix dnd protocol.

7.1  Thu Jan 19 20:25:34 CET 2006