@@ -21,6 +21,8 @@ TODO: ctrl - mouse button2 in vim makes X freeze (unreproducable with cvs)
         - moved Shift-Button2 paste combination to Meta-Button2.
         - removed (unused) arabic presentation form composing sequences.
         - correctly ask XIM for events it needs to have enabled on the window.
+        - changed version sos (ESC [ > c) response to be more compatible with
+          xterm.
 
 7.2  Sun Jan 22 21:58:16 CET 2006
         - bugfix: urxvt (not urxvtd) did not correctly handle multiple
